--- a/release_3_5_1/Dockerfile
+++ b/release_3_5_1/Dockerfile
@@ -4,7 +4,8 @@ RUN apk update \
     && apk add git
 
 
-RUN git clone https://github.com/qooxdoo/qooxdoo.git /qooxdoo \
+RUN mkdir -p /source
+    && git clone https://github.com/qooxdoo/qooxdoo.git /qooxdoo \
     && cd /qooxdoo/ \
     && git checkout tags/release_3_5_1 \
     && rm -rf ./.git ./.gitattributes ./.gitignore ./documentation
@@ -12,3 +13,6 @@ RUN git clone https://github.com/qooxdoo/qooxdoo.git /qooxdoo \
 ENV QOOXDOO_PATH /qooxdoo
 ENV QOOXDOO_VERSION 3.5.1
 CMD echo qooxdoo version $QOOXDOO_VERSION
+
+WORKDIR /source
+VOLUME /source
